@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX libxml2-2.7.1-catalog_path.patch 2209 SHA256 b3343f0611f9cb6e55bf62047a988653e3e9cc50f194b18adbc330b455236290 SHA512 99c1953865c560d2b7a01cf5fd61b1c5150857f3df8a9753ca583f6ff0a99e01c02d2586bb12220a615cf9c40a540dbe0d17996c0547bc0d20cbeefd6b45682d WHIRLPOOL 9b4daf434b38a0ae8103f02625ae033e7a94012a18cabc981f34b93fe8b422477905b74cfee300eb6a37e1af8bd358dd84804a5d0b6be8645ae9ee3e4c6fcd9b
 AUX libxml2-2.7.8-disable_static_modules.patch 365 SHA256 2f2ade9ee034af32cbd6600d45b2e23d3153dd9bb57a07a9f364836d24b189df SHA512 021c81b33802877d6fe11c8b8df86a9d4ed3dd5a7944c544abd40228805ffcab9cce9fb48b4299c164abf66d0b9815153f86851e3ebbf5004b76fe03cc54ed7e WHIRLPOOL 0c95f97d5d7fecf04f59020ae60d58d216770dce7711370f6c394ea1796c81c7087599c52a31640e27e0f60464da26e3e72a7014fbc6b9739aa2af222a73b53e
@@ -30,24 +30,14 @@ DIST xsts-2002-01-16.tar.gz 6894439 SHA256 55e5c08db29946a91ea8e70e8f2418d3fd30d
 DIST xsts-2004-01-14.tar.gz 2761085 SHA256 09bdf9f81f381ebf9bc158a9472e498e896f7a02eb7461146e9abe1b9493ca17 SHA512 32854388d7e720ad67156baf50bf2bae7bd878ca3e35fd7e44e57cad3f434f69d56bbbedd61509f8a1faf01c9eae74a078df8fe130780b182c05c05cb1c39ebe WHIRLPOOL c46a3bf7d6dd771757f4304995cc177cf51c6cdd0e9778851fc13d3809c7b984690b4f273b3e075abe018110968eb7fc78f5b83170d3e18bacf00a4ed64b213d
 EBUILD libxml2-2.8.0-r3.ebuild 6477 SHA256 11f5a45d6503026370de2e934d41ceb0cbab46db23e81c2b4e9676982a4add2c SHA512 a2fea4c2fde2a22d1d0a12666f05284465f17ed30c85b9b2c3d950193cf5a68adbb8677e9eca66486d14c36cee56ee8e6f1e6d4350256cfb8c7a8a8f28acefa8 WHIRLPOOL 5a95367e539ee18cabe1062617c91d3d9e47f704dc56643dedb61310f9f085563a23e1f8a468688ea9e40e2c0a5921cb07e4c006cccecb95e66d795aec7f34a9
 EBUILD libxml2-2.9.0-r2.ebuild 6395 SHA256 ee802deb67464b914d1f7768a5b0cf3e008d4d78b1bd78feb202a608d09eb068 SHA512 45bedc07948b6c890b34929f8649edbe8ca4277dfb5e70693c48ee71a81be2b84f39086b588d7bab58e2d43665dbc58c34dfd61a09d448cd70dc444421979bac WHIRLPOOL 0e3fd51cbe7c2852918ff8ac09fb9333773b8fbe4b6e8946d3a2b95ad30062f1442438de288534e892f4a0f436f06a8069aa39f7e6fc69308003ded2bc9c183c
-EBUILD libxml2-2.9.1-r1.ebuild 6049 SHA256 a75b0d24d1673144c2176a2984d7509ce918db76ae934bdc97294c59cc0cbe10 SHA512 07bca9e8796446c8f6b385ceb67121c68edf46d6af975126a02f2e6ee1190e3a890120ab05eec9a624f12e7dc72f9fd52d8543bc8bfebbe7cc1058c43960d833 WHIRLPOOL e5d5986a6c1f8c3bd7070ad4364f24b8c2b9202f269a9efeee6214517f748cc7e7cd62e631107c98cd3c2820a87c7579c9f365e6ce4166d3f7a9352161364245
+EBUILD libxml2-2.9.1-r1.ebuild 6048 SHA256 59d8587ccba06f49e40882148e4736d6740563e9d869eafe6171a30e4f0296b7 SHA512 30320939124ce8bd2949f401d000e58305f6b70d8ea5cde59e57661ec3c128413cc14a3b2506aada6c4e150143af8706a6d86a6388987012757b24ab93844a7d WHIRLPOOL 3b5b35ae22f32426a4b8edd02fc96735018aada04f706afdb70786affa9e41e9e3ae13b14473f80b5e78b72f9d112b2264b0b186a5ea2a12b476eff354ba5527
 EBUILD libxml2-2.9.1.ebuild 6059 SHA256 d50b185abaae22eda03f57b318fc1e07437767a58f91754c84a69a6810fa4b91 SHA512 f94cd00a87dfb9359e84d3276faba636a6f54f4e3742fca6664bdac0c8bfb46f843f59f77c986492bca31b2048ebc39a2d8d47e6893105ec576ea9a1efa1b706 WHIRLPOOL c30b9636902f77a1de793d5586825350d5664db9b4ad8b1dd6e1992da70123d093f331ec02292219af2c74c080f41bcf7a1a8616fc65d01ab8ff6375afd37993
-MISC ChangeLog 55722 SHA256 464d38c523a980d864c7e1c2010c205e39eb8b37005cfd008495797df5ffd6c9 SHA512 e94616378a54b97aec1aa8abe5e3ccb939e037a2cb4a26acb94b4c0ac309ff7f6970c62e69fc9dac1d551f4db5f3a88ca0ff699c25061336a4b63936e14ae814 WHIRLPOOL 3a5913617ce9f20bef0de03c33d305708f184fe133aaab5bfda4f62daa0efdfe52a0f8088e91385904c6e5f9cc50140ef3d767a7ca577122c035cd97d94c65c8
+MISC ChangeLog 55828 SHA256 0f56dca20ef3406fecd828e541849559528280c444eb6b916fe66b14c53bf388 SHA512 46ada094e047193b2e21bff9807913c784e216cd42a8fc4406dd0153725d32b64ba703234cd4ba97670012431f4f37c866dd014dd7f556f2dc30a4bc36183d39 WHIRLPOOL b687793e978e6438b2a299dcbf64182e23ce81c959550797a53842d0362343508ca89ceecf284295585f021dbf7a06d631f9bb8ac7f6c63d6dd97eccae5cd481
 MISC metadata.xml 240 SHA256 5dcdc1a8fd86d82f00a60bb322fb4f8a579d75ec7be2398164435197ab3903df SHA512 d673fbe248c2fcdf401f91f8d0e15587fd9f94c604d62f7864931f379b35a3ffc20264ae9668661a0d09693cd42db30c7f74fcb606da812312e394272acfeec8 WHIRLPOOL 4d2cc2b44bc446377dc659162e9f638650e82564a3328b0b23c1e6f197e88b9ae545d8778c69829a6f268e8b5f7d0db1b0aee1e3d8aedd909d1d756dc4aa94c3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR4GnQAAoJELp701BxlEWf+nEP/38DSD8JM/qFIQdfzD66QIfz
-3LmkocqheFqcmt9x88s6MhVwjRM1fb0id4syz7cLar7zyrVrB/uwPx20GVDkOEbH
-rBHhdXipXvNrNXpujuiMI5+DgjcWZUUh/Ss23spwSwVYrKLySAOlhAlu/x77hqzd
-RWffZbgTIgsq0UasDPP+RgH81rv5IrOj91l6kjKtSipcbch4tLX49WSAgm/hl7H9
-cGl7019DeH2jcqAWTZdlcsqNfJ418HH3jfRNzKMWBgDJENp7NX4b/PR/PXJZ4MTQ
-6oQDhX1G6iKVWPxT2+Z5WnOXYoBPjVJC0Pb+EqkG697dxXP1KR2m/+sXHrEvlSUk
-Ci++dpn0lstSU0VLDiO4g9E8ZZgKrbl08xiMu6FEYtgndWLHV2js1LS9YWcSTpxx
-zE1diHOBaYxlJtreRp0Cp0uxpmgvqxTmt3iW1H5Q//bvFywy53Jg874DdKNd0s3a
-W2WvNXJBh7s0qKAZuAQTGfIHzj6acDdTEng84mwtAF+tLbkTkcUBFXTi/OrTXfim
-S8bao6rmqn+uSzZKs4YNbEDzaNyr01NogWTvBGI5h1CDT4DnxTXCnPFoaTC/eU+K
-slrT63zYyEC9JlHZCkfeIYO0nU/t4Kl5XZofsK3WokoX1XTuxxv6EKF5AnBGbST7
-xq4KN3OYjgC73I3ULr9j
-=hCfd
+iEYEAREIAAYFAlHgrzUACgkQVWmRsqeSphMAcQCfY9ZGQ63+gRboTyp4wA4VSO1u
+M1IAniJy5qSVsSRsr3/z/Y3GIJtgLfo3
+=Uazj
 -----END PGP SIGNATURE-----
