@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX quazip-0.4.4-zlib.patch 811 SHA256 0a5b839a2481319e8636151db48157413bb7b7cb928c2625dad4789c36d07a3f SHA512 3162769326b027c9a1360ec0a717bd211bf9faa1d8def42832ba1f88669620cfb219e4e52123ad0b85f5789da50a8858a135eaf7ad5a7eeb8fcf40456fbadf08 WHIRLPOOL 1a922dfa690db4a1988f3e65e24422040a73004b50ef9f2e525d1924c8a64cbc45b65d70935b9bc1815cb92a95d28cca6f1c76c474cd9fdeecbc080ecb8f0114
 AUX quazip-0.5.1-prll.patch 232 SHA256 e931fbc7e271d889e56f8844aab902dbe7263efacb826d90ae3507cd2c698ddc SHA512 4a0c6a9386068262e07b7e2c31c404013173def634c5dfa86ef90c9e0b387b36df2daf4cdc511cdfc64ed7e51d4916911de7123a5d61625561a211c706d60927 WHIRLPOOL b97d15d382000c820d7309c8356f15ed25bfc8e7ecf6098d6200e34f3ae926f4fe3e41b7572dea66a74aed7c4fe78edd576682f8f10be0aca3c6c6af64863ce7
@@ -8,24 +8,14 @@ DIST quazip-0.4.4.tar.gz 301733 SHA256 63e8ffba784a4673bc3c340fa4df79e2980f6849b
 DIST quazip-0.5.1.tar.gz 354658 SHA256 078176a72288983f78b45c15f7d245131d9d5fc36a22f2757d75a78658c33268 SHA512 b4b5fe48f4d30fe0f9d2606c691337526ced169806e4267368dedaee543e12826dc2799c451851c0465f86fbf27d663f94e3b15b27744eac6104f9f4667de640 WHIRLPOOL ffb3cdc76e959fc8bee7cec3952b90f3e97fd7aad5602b6a2f3bb5d5e1c944e228dac43cca430282f61210e65d6f1afd993dbe29ee9539f33562b3ca23edf31c
 DIST quazip-0.5.tar.gz 377005 SHA256 fdafaef0d93a1301dce5fd6e2e437e0b5cf04c6b89469a32116c75c5d5429ab7 SHA512 1db00e6953b96097ab5e346e9e460849d1abe37ad082b3e1357e6d2fe3c389b47b4c3346d5d72b7ce8f1888887eb36d4459fe2f1bbf6c4677b2c327021031577 WHIRLPOOL 00aa2537f29c3a858dd13530158735404106bf0e343046a8e63e2e4562f8026b2b9f2edbe31d06d5f4f9d40dc38a2cc00557c9a51cf146b99b557bcdb9054528
 EBUILD quazip-0.4.4.ebuild 674 SHA256 0ae5c24406d4b805e8daf2fa28a77333c44b6a01ea2e5ad2a5913844f6a03033 SHA512 f3b1efcf68387304b296326428695615953616a7bc3b46508429d89a7e192cfcaff30e5147f477d9f139ed27134f4c5ad434b36204e49fa6ec33519b627e1976 WHIRLPOOL c37e99140958661772915afb39a1da8dcfe622438202fe439e31be222c7aa247d4c72e64e8146d891248d11188583765ac5d7130d61e1449c35cc680c84029ae
-EBUILD quazip-0.5.1-r1.ebuild 1209 SHA256 986d8096ba767ff2f4ad142496b74f436c91e87d8f4dbed901a60fc36739d56c SHA512 238171fae76230381496fceec31c24aa9d88b8276166354bcd7947c5108d0cf1514369bc2e5a8959684b225d2d44e7fd49d64add497e640397d43fe3467ae6df WHIRLPOOL 6152a2db189b26aede81ed44fdbe67c2ed87c34b6327d723d7b8355762a631dd01ca37726c85d1d80c3f6f3a907b8083e340667b8edf8ad4443f8f9fd910f4cd
+EBUILD quazip-0.5.1-r1.ebuild 1208 SHA256 10bfafde9ca1ae69bbd0aebfc9f3f116d73e159cedc40e98aec7412bb416852a SHA512 74074600d4903ab9ff0937919e15d8a0792547e9d6a2f279b9ded19005d138b5f8061469b8b4c9178a60c40769dde4fc6e55ee31d048fba281a71d4b6ab18b38 WHIRLPOOL e608e314a2c54d5b661e4ec3000b4bb449d8a8b05df966f3e494310ac9ea6e2d29f8bdcb9019240a9714026561dd2dc70a326b0c3628eb056868ba10d61bd9a7
 EBUILD quazip-0.5.ebuild 699 SHA256 032cc95396ca43880cc25e09b4564e0eb2bfb38742ba307e5c7aaa07e083b95b SHA512 0789d54009122fa27c5b74a2daf6830cf8dbdb954a8d017e91673c5ff1e174cd8d4a0ac26e3fbc06ee5da8e6250a4e38e0541898910d0fe55fd15b96d89bce73 WHIRLPOOL 56d53f1714a4ef176ba32c2e3c6e5b4308ea6f55392e7388d5facf54968cc5ae47a6a60c5e177a73a3c9a242fe2383357a5623c61f021b27b7860e3527721f4c
-MISC ChangeLog 4029 SHA256 e50e9d40920c170e5034206b950bbf7700060d86848bd8aa984104b31ef437e1 SHA512 bb929c4f02f4b43b4e8f9711e811797d3c4331b4fd1ae5cd608ce2c81ca87327bc74e61ca85a5646bc3454b78bb3812c06d10f02474f330432bfbf187d4054ec WHIRLPOOL 1d8c82b1cd788593017fb9d40996c7c2c950ea8fdef5010fcb18d0d8fd8418d3e9eceb5e0db75a507b5188fd5c55b2847dc7dfbfb2d6a020253dc22fb524a8cc
+MISC ChangeLog 4134 SHA256 53ea0bb19caa1f136babbdf8c6902f1421f83ded4378f3c6a36018df28c71608 SHA512 b4a110011de83fe634737e965221fbf281ec5ff88e60ece1484803f004f4b34c855f2a3282f77642f549380ffac6371b567965789ae502b573dc2670e8fa7d4b WHIRLPOOL 348168c7100606b89aa6123d9f78ff39a180bf73b0565ac84633d456789c98fb9f1853007afb56abf66fa165c430886b067f257b1fda058f182bfef05f315a55
 MISC metadata.xml 223 SHA256 070a9dafb8f5cbcfacc3921af8689ed008b6d8c845ddb2e4b475916f92ed4e0d SHA512 dc56e55f7ecf7f95f11827ae32d0849a1e9676cb9560dcbe6901c5cd55061bada92db22eb1c1137eb154bf6c6ff4d10db6cee67e55add1bd97f740262ea718c9 WHIRLPOOL 248f970fd136317709f86d6729462926fba4f66d71147fc454cf0016af5fc2220c1ad9071362cc72816709552c38d1b2754d6d5aacef50fae549dcd6d89b82e7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR4GnGAAoJELp701BxlEWfig4P/23SWt3ZBNRNMiWPpP5+d1Zk
-xmpmzkwtsUmTz6WeryAA2/FQ5548MaQZT63yUWnPzUimM4x/TGT2WrPzZ2+911gQ
-uAAlqqq0AURuJ4Eu2Quj8GcHm48u7XIZ2r+T8wG16dw/DpJyqDaLoobas+BtQMQG
-tVho0pdfUeRvHdyTVdPA5K2WjAiBHmeZEOsLklHOQCn3Qhdh8o5DlYLHoBn4Sis8
-GvoalL7v4DVHUiU+3U56enyxx1hGbu0M94jip5o1TZS6y6JpxGVjTZOYm96Du7b1
-98yS5PF6WZtPiroZrDsElSuwRXmRD1x194XPQbHceVIqaXrcqo51rCtBEhiz0221
-kSD/r+NKeZwfukRpw8RuZfGE+Qtm4JtdT8/SgoaBqhWy+m9tw/YF2lGnvBtz4XjY
-aUILZNt71fwM0JXIYan86dKyootwQzGqNxAhnwHyU6l6R15uBYxoUwtfIXSOS1Xu
-NZydui2RHV656oQs62yvpkQeBrt44q9EpUSm5uCo19VuWswJ7ZwDRC5m7PLkPiiY
-R/OeZ8n7oBLFGxDIRhZYNeG2Ma5mOfpEdQJWkX/RzUxLvOtdSvIhUKq9MMzNQgDZ
-k6KLDhZxzUz7MPK9UZ/szp6cTjKVwyBzaf2DEJqERySw7Vej1m1yC0fNCuM7BN94
-Rg4pn0vbyf6azpYRklls
-=Fz+a
+iEYEAREIAAYFAlHgsNsACgkQVWmRsqeSphP4FACggI5sfYFk7D1hi5Z4SGNGsvmv
+eIUAn06r+sqcQcmUPK327JodXql0+Pz7
+=N4a3
 -----END PGP SIGNATURE-----
