@@ -2,17 +2,17 @@
 Hash: SHA256
 
 DIST freedink-1.08.20121209.tar.gz 1853822 SHA256 196bfcc7b874c2fb9ac94d663f14fb759e644cc2400f77f734a098ca568dbda7 SHA512 40d1322908e429f59a97c79bbcc6d39b51c58fc36f36d612ec189add1aa586b01e929b59ada0da62ca418db6fa81131d282c03aa10d1b69de8224cceba9b0747 WHIRLPOOL 43fccb628bcd788621927d409b38635875ab47202ce9fdf2c3d3706bac87f2939fdcb5ef362109e3bbbdd90f58648da5db3d6ea7629b407c6ffd4059307d8a59
-EBUILD freedink-1.08.20121209.ebuild 1289 SHA256 1ad3bdc71634d67936b9251e6cf1c893363734325169ca67b33f5dedf13c13e6 SHA512 a6d203f9e2e20e839df6334dc97f777ef5d69c5607ae5f1bc3ccbcd256dba8e5812ed8574467b2c129b467248630626f26f027d33321c5d8612129fe01e526ee WHIRLPOOL ca73bb59df7bf47e2764df2cc20e6ec90ccec622e2b4247e0558980fa5f2201bb485f55318ddc32e8a3bd6ab857f594d267646c92e4d4c1cd34c256e1f466f05
-MISC ChangeLog 380 SHA256 a2ecc421d52439b506098fa39a0e33f24c4f1788b1139e0c90ca73dc23a9b36e SHA512 d2e27ade833874068fe8a02903575e0b9effceb53096c865a13c1be6e3c32128346840f861783a72722d1994352a4f28b8bfa7617b7c6345dda1589f262095c6 WHIRLPOOL 3babf017ca48014c7ae24c0bad9b22b544bffea3633793b8dfd1e57c832981907d9d0997f1c86b95e212f84e177b3f58b4ff71defa0397b2fa4eeaf81b4cfbf9
+EBUILD freedink-1.08.20121209.ebuild 1296 SHA256 32fec2b44510d5ebe619f1625ec7d33408abfe42053b9452555540ac17bd84ce SHA512 5bb2b5f925d28eca2df4dc61566ce2c281ddff1ba07354b0b1feb0e70ea8941a0241ecac3602e3225beb517348fdfbe552dd825ba8864befe9c3dfa09f6a5627 WHIRLPOOL a43df2ca3b1e10fbe668c5f711da22f89f13241da1d1a3bba4d8fbbe927e575744108bf615f38ea34e86c13796f563d7baf091352c9640099ad5116d2ca3f434
+MISC ChangeLog 495 SHA256 31acc387184fddbb08520bad6ea42f9ef7635cace69ecf0e38681fd6a87d86df SHA512 1376d3d1a08794597ea87e903f65bf77aa70aadb51558d49ce9b01def191b5b1bae87d8dac7e3c2ac138c3fbaa1ba4b7283a90fb482547fffee1034d28b40e49 WHIRLPOOL 9907399b85fea4c05af2fc1ff143a8212c10d70272a668dc0b3e368f4d1840d6ed842717fcb5d9ba1b0146a0b5f31872c3734a403902128c84c7c3b4c51856c1
 MISC metadata.xml 254 SHA256 42d769831f9be3fb5b0972b75bc3b1e4765416161881d7303cb637abbe03d6dd SHA512 2a78f67329bbc7aab1b971330a49fe7a0812e95f8775a91e6b97d4751b8b6fd92510ecf1bee9bd43dfb376cb0a71830a74e2b9f9212168168a2a7e22b223ae31 WHIRLPOOL 3d71526e2e1ce18ca62385c234302e0694490b40f263e456ff4166e1156279c97e3b58fb4b1959c69ce01d96bc9e1e9eda57e9f596a6155e53bb3f1f496be71e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJR3fgcAAoJEFpvPKfnPDWzHX8H/0aDVDUVOfCuZH7RavdXxsbz
-riaRRr/DejieqGsLXak2CL4OQhRNEieGgocI/eXnEVLQLtogsppQQ41YSpkOjVVT
-mwJhnlK7HVy9ZdyMgEbQf1VHMbgdzTc5j+eSQ2ZgCsKy5SSidVhpInyALrAH0L82
-Lt7SuR9gEtQ6LAbjIcY5KunP2j9MND9fc+wr51FvFpnVqc1Z6VERLjD/sKZAHgyx
-tnt+UkIeMJG3YEZ2XJvV09tnRyusLAUiz7cgJhkL5l9EeUMxpYGiRwQdM1zni30+
-QTsIbkQFb9Ze7CBhhVpJYpDmoLr6r7LYsy5wMU7BQtM+HWdsJZIMIOm5yaDUN7E=
-=fpYX
+iQEcBAEBCAAGBQJR4JtyAAoJEFpvPKfnPDWzhC4IAK/tBtiQ3WzoTRk5QkDkKfaR
+givZxgdvAZBMZ+HJifeJ+5OiJH+juJNxpftY1digulmE9c40umHy5kPnuVl8xiLg
+IcwmkJ1ys3HVeOxqLRQf+CirU4eNJBWhDSiYgbzlmmkgu1oqQUj57aRfre7uZjQd
+BT2tEx6SQS0t34lPJrx5mcwyDV1FZHvsJD0uWl1uAQafVBzL2peMmWkDAQdFpRQo
+ClyFQaRr5oukmSs1lYGYHmaopYYdXfloE7IZLfxlnmua/F+BeRovbdBUNKXCNr0R
+HnZ6Kd5rhFZUYG/VHBa/TRjbPrfwsggUasrJgVUvx5Wqx2NgCon39zNHt0ymNfA=
+=y+OH
 -----END PGP SIGNATURE-----
