@@ -4,10 +4,10 @@ DESCRIPTION=A simple C++ wrapper over Gilles Vollant's ZIP/UNZIP package
 EAPI=5
 HOMEPAGE=http://quazip.sourceforge.net/
 IUSE=test
-KEYWORDS=~alpha amd64 ~arm ~hppa ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
+KEYWORDS=~alpha amd64 ~arm hppa ~ppc ~ppc64 ~x86 ~x86-fbsd ~amd64-linux ~x86-linux
 LICENSE=LGPL-2.1
 RDEPEND=sys-libs/zlib[minizip] dev-qt/qtcore:4
 SLOT=0
 SRC_URI=mirror://sourceforge/quazip/quazip-0.5.1.tar.gz
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	63afaaed8aa819fdcb814c7cd39495a2	multilib	892e597faee02a5b94eb02ab512e7622	qt4-r2	ce0c9abfee272185e03ab73f09f5fd69	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=9f06ae17746329a5b63903a937e42d88
+_md5_=0c636d1d371d03be20feff09b7b2d175
