@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/quazip
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/quazip/ChangeLog,v 1.29 2013/07/12 20:40:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/quazip/ChangeLog,v 1.30 2013/07/13 01:43:54 jer Exp $
+
+  13 Jul 2013; Jeroen Roovers <jer@gentoo.org> quazip-0.5.1-r1.ebuild:
+  Stable for HPPA (bug #476556).
 
   12 Jul 2013; Agostino Sarubbo <ago@gentoo.org> quazip-0.5.1-r1.ebuild:
   Stable for amd64, wrt bug #476556
