@@ -1,6 +1,10 @@
 # ChangeLog for games-rpg/freedink
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-rpg/freedink/ChangeLog,v 1.1 2013/07/11 00:11:05 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-rpg/freedink/ChangeLog,v 1.2 2013/07/13 00:12:30 hasufell Exp $
+
+  13 Jul 2013; Julian Ospald <hasufell@gentoo.org>
+  freedink-1.08.20121209.ebuild:
+  update dep on freedink-data
 
 *freedink-1.08.20121209 (11 Jul 2013)
 
