@@ -1,6 +1,9 @@
 # ChangeLog for dev-libs/libxml2
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.391 2013/07/12 20:40:47 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libxml2/ChangeLog,v 1.392 2013/07/13 01:36:52 jer Exp $
+
+  13 Jul 2013; Jeroen Roovers <jer@gentoo.org> libxml2-2.9.1-r1.ebuild:
+  Stable for HPPA (bug #476438).
 
   12 Jul 2013; Agostino Sarubbo <ago@gentoo.org> libxml2-2.9.1-r1.ebuild:
   Stable for amd64, wrt bug #476438
